# uniffi-dart

./: Cargo.toml  README.md
fixtures/proc-macro-pure/: Cargo.toml  proc_macro_pure_uniffi.dart
fixtures/proc-macro-pure/src/: lib.rs
fixtures/proc-macro-pure/test/: proc_macro_pure_test.dart
fixtures/proc-macro-pure/tests/: mod.rs
fixtures/simple-fns/src/: api.udl  lib.rs
fixtures/trait-interfaces/: Cargo.toml
fixtures/trait-interfaces/src/: api.udl  lib.rs
fixtures/trait-interfaces/test/: trait_interfaces_test.dart
fixtures/trait-interfaces/tests/: mod.rs
src/: lib.rs  testing.rs
src/cli/: mod.rs
