[package]
name = "proc_macro_pure_uniffi"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "proc_macro_pure_uniffi"
crate-type = ["lib", "cdylib"]

[dependencies]
uniffi = { workspace = true }

[dev-dependencies]
anyhow = "1"
uniffi-dart = { path = "../../", features = ["bindgen-tests"] }
uniffi = { workspace = true, features = ["bindgen-tests"] }
